Fix: fine-tune Soniox settings so they are  Best ones.

--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -315,7 +315,7 @@
                 "title": "Live Finalization Timeout",
                 "whenToUse": "После Stop иногда теряются последние слова.",
                 "tradeoff": "Большее значение чаще добирает хвост, но дольше завершает операцию.",
-                "recommended": "4-6 секунд для большинства; увеличить при нестабильной сети."
+                "recommended": "По умолчанию 1 секунда для быстрого Stop. Поднимите до 2-4 секунд, если часто режется хвост фразы; выше — только при нестабильной сети."
               },
               "instantStop": {
                 "title": "Instant Stop (локальная фича AivoRelay)",
@@ -351,7 +351,7 @@
             "languageIdentification": "Language Identification: добавляет метаданные обнаруженного языка по токенам.",
             "speakerDiarization": "Speaker Diarization: добавляет метки спикеров в метаданные токенов."
           },
-          "tip": "Рекомендуемый старт: stt-rt-v4, Live = ON, Endpoint Detection = ON, Keepalive = 10s, Finalization Timeout = 4-6s."
+          "tip": "Рекомендуемый старт: stt-rt-v4, Live = ON, Endpoint Detection = ON, Keepalive = 10s, Finalization Timeout = 1s (увеличивать только при необходимости)."
         },
         "model": {
           "title": "Модель Soniox",
@@ -390,7 +390,7 @@
         },
         "finalizeTimeout": {
           "title": "Таймаут финализации live (секунды)",
-          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (2-20 секунд). Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку."
+          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (1-20 секунд). По умолчанию 1 секунда. Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку, но чаще режет хвост."
         },
         "instantStop": {
           "title": "Мгновенный Stop (локальная фича)",
