--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -725,7 +725,7 @@
                 "title": "Live Finalization Timeout",
                 "whenToUse": "Use this when the transcript sometimes cuts the ending after you press Stop, or when your network is inconsistent and final tokens arrive late.",
                 "tradeoff": "Higher values improve completeness (fewer missing tail words) but keep the session alive longer in the background before full completion. Lower values feel faster but increase the chance of dropping the very end of speech.",
-                "recommended": "Start with 4-6 seconds. Raise to 8-10 seconds only if endings are frequently cut. For near-zero wait behavior, keep this low and enable Instant Stop."
+                "recommended": "Default is 1 second for fast stop. Increase to 2-4 seconds if tail words are often cut; raise further only on unstable networks."
               },
               "instantStop": {
                 "title": "Instant Stop (AivoRelay local feature)",
@@ -761,7 +761,7 @@
             "languageIdentification": "Language Identification: includes per-token detected language metadata.",
             "speakerDiarization": "Speaker Diarization: includes per-token speaker label metadata."
           },
-          "tip": "Recommended baseline: stt-rt-v4, Live ON, endpoint detection ON, keepalive 10s, finalize timeout 4-6s."
+          "tip": "Recommended baseline: stt-rt-v4, Live ON, endpoint detection ON, keepalive 10s, finalize timeout 1s (increase only if needed)."
         },
         "model": {
           "title": "Soniox Model",
@@ -800,7 +800,7 @@
         },
         "finalizeTimeout": {
           "title": "Live Finalization Timeout (seconds)",
-          "description": "What you see: when you press Stop, recording ends immediately in UI. What happens next: AivoRelay still waits in background for late Soniox final tokens, up to this timeout, then force-closes the session (2-20s). Increase this value if last words are often missing; decrease it if you want faster completion and can accept occasional tail truncation. If you want almost instant finish, use Instant Stop."
+          "description": "What you see: when you press Stop, recording ends immediately in UI. What happens next: AivoRelay still waits in background for late Soniox final tokens, up to this timeout, then force-closes the session (1-20s). Default is 1s. Increase this value if last words are often missing; decrease it only if you want even more aggressive completion and can accept occasional tail truncation. If you want almost instant finish, use Instant Stop."
         },
         "instantStop": {
           "title": "Instant Stop (Local Feature)",
