--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -371,7 +371,8 @@
         "languageHints": {
           "title": "Language hints",
           "description": "Коды языков ISO через запятую (например: en, es). Soniox будет склоняться к этим языкам, что в AivoRelay обычно улучшает точность и уменьшает случайные переключения на другой язык.",
-          "placeholder": "en, es"
+          "placeholder": "en, es",
+          "supportedLanguagesLink": "Поддерживаемые языки"
         },
         "profileLanguageHintOnly": {
           "title": "Использовать язык текущего профиля как hint",
@@ -379,7 +380,7 @@
         },
         "languageHintsStrict": {
           "title": "Строгое ограничение языка",
-          "description": "Сильно ограничивает распознавание языками из hints (лучше всего с одним языком). В AivoRelay это полезно, когда нужен строго один язык, но при реальном mixed-language может ухудшать часть результата."
+          "description": "Рекомендуемое использование: по возможности указывайте один язык. Этот режим работает максимально надёжно, когда задан только один язык. Пример: { \"language_hints\": [\"en\"], \"language_hints_strict\": true }. Если указать несколько языков, устойчивость падает: при неоднозначной идентификации (сильный акцент, акустически похожие языки) точность может ухудшиться. Пример: { \"language_hints\": [\"en\", \"es\"], \"language_hints_strict\": true }. В сложных случаях модель всё равно может выбрать неверный язык/скрипт, поэтому для критичной точности рекомендуется single-language strict. В AivoRelay это лучший режим для сценариев с заранее известным одним языком."
         },
         "endpointDetection": {
           "title": "Endpoint detection",
