--- a/src/i18n/locales/ru/translation.json
+++ b/src/i18n/locales/ru/translation.json
@@ -315,7 +315,7 @@
                 "title": "Live Finalization Timeout",
                 "whenToUse": "После Stop иногда теряются последние слова.",
                 "tradeoff": "Большее значение чаще добирает хвост, но дольше завершает операцию.",
-                "recommended": "По умолчанию 1 секунда для быстрого Stop. Поднимите до 2-4 секунд, если часто режется хвост фразы; выше — только при нестабильной сети."
+                "recommended": "По умолчанию 500 мс для быстрого Stop. Увеличивайте, если часто режется хвост фразы; выше — только при нестабильной сети."
               },
               "instantStop": {
                 "title": "Instant Stop (локальная фича AivoRelay)",
@@ -342,7 +342,7 @@
             "model": "Model: stt-rt-* для real-time стриминга, stt-async-* для async-пайплайна.",
             "live": "Live Real-time Streaming: включает прямой WebSocket-путь для моделей stt-rt.",
             "timeout": "Soniox Timeout: таймаут для не-live/legacy Soniox запросов.",
-            "finalizeTimeout": "Live Finalization Timeout: сколько ждать финальные токены после Stop перед принудительным закрытием сессии.",
+            "finalizeTimeout": "Live Finalization Timeout: сколько миллисекунд ждать финальные токены после Stop перед принудительным закрытием сессии.",
             "instantStop": "Instant Stop (фича AivoRelay): мгновенно завершает live-сессию по Stop и игнорирует поздние чанки; самый быстрый UX, но выше риск обрезать последние слова.",
             "languageHints": "Language Hints: повышает вероятность распознавания указанных языков.",
             "profileLanguageHintOnly": "Использовать язык текущего профиля как hint: игнорирует ручной список Language Hints и отправляет ровно один hint из активного профиля (или глобального языка, если профиль не активен).",
@@ -352,7 +352,7 @@
             "languageIdentification": "Language Identification: добавляет метаданные обнаруженного языка по токенам.",
             "speakerDiarization": "Speaker Diarization: добавляет метки спикеров в метаданные токенов."
           },
-          "tip": "Рекомендуемый старт: stt-rt-v4, Live = ON, Endpoint Detection = ON, Keepalive = 10s, Finalization Timeout = 1s (увеличивать только при необходимости)."
+          "tip": "Рекомендуемый старт: stt-rt-v4, Live = ON, Endpoint Detection = ON, Keepalive = 10s, Finalization Timeout = 500ms (увеличивать только при необходимости)."
         },
         "model": {
           "title": "Модель Soniox",
@@ -395,8 +395,8 @@
           "description": "Как часто отправлять keepalive при тишине (5-20 секунд), чтобы WebSocket-сессия не закрывалась. Рекомендация Soniox: если аудио не отправляется, keepalive должен приходить минимум раз в 20 секунд. В AivoRelay это снижает переподключения между фразами и делает live-поток стабильнее."
         },
         "finalizeTimeout": {
-          "title": "Таймаут финализации live (секунды)",
-          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (1-20 секунд). По умолчанию 1 секунда. Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку, но чаще режет хвост."
+          "title": "Таймаут финализации live (мс)",
+          "description": "После Stop в Soniox live AivoRelay ждёт финальные хвостовые токены заданное время, затем принудительно закрывает сессию и переходит в idle (100-20000 мс). По умолчанию 500 мс. Большее значение чаще «долавливает» конец фразы, меньшее — ускоряет остановку, но чаще режет хвост."
         },
         "instantStop": {
           "title": "Мгновенный Stop (локальная фича)",
